navbar left aligned & desktop view navbar bug fixed

--- a/assets/css/media.scss
+++ b/assets/css/media.scss
@@ -462,6 +462,9 @@ $tab:768px;
               opacity: 0.8;
               margin-left: .7rem!important;
             }
+            .dropdown-item{
+              padding: 0.2rem!important;
+            }
           }
         }
 
@@ -653,7 +656,7 @@ $tab:768px;
 }
 
 
-@include tab{
+@include tab{ 
   .business-footer-underline {
     margin: 0 auto;
     width: 80vw;
@@ -779,20 +782,19 @@ $tab:768px;
           width: 100%;
           background-color: #0b1120 !important;
           box-shadow: none !important;
-          text-align: left;
+          text-align: left; 
+          }
           li {
             width: 100%;
             list-style-type: none;
-          font-family: ProximaNovaSemiBold;
-
+            font-family: ProximaNovaSemiBold;
             margin: 0.2px auto !important;
             background-color: #0b1120 !important;
             border: 0.5px solid #0b1120 !important;
             padding: 0 !important;
             text-align: left !important;
           }
-        }
-
+         
         a {
           color: white;
           text-decoration: none;
