--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -140,7 +140,7 @@ section:nth-child(3) {
 
 .custom-dropdown-menu {
   padding: 0.4rem 0;
-  width: 200px;
+  width: 250px;
   background-color: white;
   color: black;
   border-radius: 5px;
@@ -154,17 +154,18 @@ section:nth-child(3) {
   .dropdown-item {
     display: block;
     width: 100%;
-    padding: 0.25rem 1.5rem 0.25rem 0.7rem;
     clear: both;
     color: #212529;
     text-align: left;
     background-color: transparent;
+    font-family:ProximaNovaSemiBold ;
     border: 0;
     font-weight: 500;
-    font-size: 0.7rem;
+    font-size: 0.68rem;
     &:hover {
       color: $orange;
     }
+  
   }
 }
 
@@ -201,7 +202,7 @@ section:nth-child(3) {
     list-style-type: none;
     li{
       position: relative;
-      &:hover {
+      &:hover,&:focus,&:focus-within {
         color: $orange !important;
         .nav-link{
           color: $orange!important;
@@ -249,8 +250,7 @@ li:hover{
 }
 
 .nav-bg,.navbar-bg-onsscroll,#mobile-navbar,#mobile-navbar-fixed{
-  li:hover  {
-    color: $orange !important;
+  .nav-link:hover  {
     .dropdown-icon {
       background-image: url('../images/special_icons/down-arrow-orange.svg') !important;
       background-position: center;
